--- a/clean-website/index.html
+++ b/clean-website/index.html
@@ -1,101 +1,189 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-     <link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Doe - Personal Website</title>
+    <title>Timothy Holland</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#" class="tab active" data-section="home">Home</a></li>
-                <li><a href="#" class="tab" data-section="about">About</a></li>
-                <li><a href="#" class="tab" data-section="education">Education</a></li>
-                <li><a href="#" class="tab" data-section="writing">Writing</a></li>
-                <li><a href="#" class="tab" data-section="projects">Projects</a></li>
-                <li><a href="#" class="tab" data-section="contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+    <div class="container">
+        <header>
+            <nav id="navbar">
+                <ul>
+                    <li><a href="#" class="tab active" data-section="home">Home</a></li>
+                    <li><a href="#" class="tab" data-section="about">About</a></li>
+                    <li><a href="#" class="tab" data-section="education">Education</a></li>
+                    <li><a href="#" class="tab" data-section="writing">Writing</a></li>
+                    <li><a href="#" class="tab" data-section="projects">Projects</a></li>
+                    <li><a href="#" class="tab" data-section="contact">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
 
-    <main>
-        <section id="home" class="section active">
-            <div class="hero-content">
-                <h1>John Doe</h1>
-                <p>Aspiring Software Engineer | CS Student</p>
-            </div>
-        </section>
-
-        <section id="about" class="section">
-            <div class="hero-content">
-                <h2>About Me</h2>
-                <p>I am a passionate computer science student seeking internship opportunities to gain hands-on experience in the field. With a strong foundation in programming languages such as Java, Python, and C++, I am eager to apply my skills and contribute to innovative projects.</p>
-            </div>
-        </section>
-
-        <section id="education" class="section">
-            <div class="hero-content">
-                <h2>Education</h2>
-                <h3>Bachelor of Science in Computer Science</h3>
-                <p>University of XYZ | Expected Graduation: May 2024</p>
-                <p>Relevant Coursework: Data Structures, Algorithms, Web Development, Database Systems</p>
-            </div>
-        </section>
-
-        <section id="writing" class="section">
-            <div class="hero-content">
-                <h2>Writing</h2>
-                <div class="writing-item">
-                    <h3>Thesis</h3>
-                    <p>Title: [Your Thesis Title]</p>
-                    <p>Abstract: [A brief summary of your thesis]</p>
-                    <a href="documents/thesis.pdf" target="_blank" class="btn">Read Full Thesis</a>
+        <main>
+            <section id="home" class="section active">
+                <div class="hero-main-content">
+                    <h1>Timothy Holland</h1>
+                    <p>Master of Computer Science | The University of Melbourne</p>
                 </div>
-                <div class="writing-item">
-                    <h3>Article 1</h3>
-                    <p>Description of Article 1</p>
-                    <a href="path/to/article1.html" target="_blank" class="btn">Read Article 1</a>
-                </div>
-                <div class="writing-item">
-                    <h3>Article 2</h3>
-                    <p>Description of Article 2</p>
-                    <a href="path/to/article2.html" target="_blank" class="btn">Read Article 2</a>
-                </div>
-            </div>
-        </section>
+            </section>
 
-        <section id="projects" class="section">
-            <div class="section" id="projects">
+            <section id="about" class="section">
                 <div class="hero-content">
-                    <h2>Projects</h2>
-                    <!-- Other project items -->
-  
-                    <div class="project-item">
-                        <h3>Game Demo</h3>
-                        <p>Check out this interactive demo of our latest game!</p>
-                        <iframe src="path/to/game-demo.html" width="800" height="600"></iframe>
+                    <h2>About Me</h2>
+                    <p>Coming soon!</p>
+                </div>
+            </section>
+
+            <section id="education" class="section">
+                <div class="hero-content">
+                    <h2>Education</h2>
+                    <p>For coursework descriptions, specifics, and highlighted projects, see
+                        <a href="#" data-section="coursework" target="_blank" class="tab">here</a>.</p>
+                    <h3>Master of Computer Science | The University of Melbourne </h3>
+                    <p>Dates: July 2022 - Present</p>
+                    <p>Coursework: Data Structures, Algorithms, Web Development, Database Systems</p>
+                    <h3>Exchange Semester | Charles University | Prague </h3>
+                    <p>Dates: January 2023 - June 2023</p>
+                    <p>Coursework: </p>
+                    <h3>Bachelor of Arts (Hons) | La Trobe University </h3>
+                    <p>Dates: January 2021 - December 2021</p>
+                    <p>Coursework: </p>
+                    <h3>Diploma of Informatics | The University of Melbourne</h3>
+                    <p>Dates: July 2015 - December 2018</p>
+                    <p>Coursework: </p>
+                    <h3>Bachelor of Arts | The University of Melbourne</h3>
+                    <p>Dates: January 2014 - December 2018</p>
+                    <p>Coursework:</p>
+                    <h3>Exchange Semester | Boston University </h3>
+                    <p>Dates: July 2017 - December 2017</p>
+                    <p>Coursework: </p>
+                </div>
+            </section>
+            <section id="coursework" class="section">
+                <div class="hero-content">
+                    <h2>Coursework</h2>
+                    <h3>2024 | Semester 1 | The University of Melbourne</h3>
+                        <h4>The Ethics of Artificial Intelligence</h4>
+                        <p><a href="https://handbook.unimelb.edu.au/2024/subjects/comp90087" target="_blank"
+                              class="btn">Subject description.</a></p>
+                        <h4>Research Methods</h4>
+                        <p><a href="https://handbook.unimelb.edu.au/2024/subjects/comp90044" target="_blank"
+                          class="btn">Subject description.</a></p>
+                    <h3>2023 | Semester 2 | The University of Melbourne</h3>
+                    <h3>2023 | Semester 1 | Charles University, Prague</h3>
+                        <h4>Data Structures 1</h4>
+                        <p><a href="https://ktiml.mff.cuni.cz/~fink/teaching/data_structures_I/" target="_blank"
+                          class="btn">Subject description.</a></p>
+                        <h4>Deep Learning</h4>
+                        <p><a href="https://ufal.mff.cuni.cz/courses/npfl114/2223-summer" target="_blank"
+                          class="btn">Subject description.</a></p>
+                        <h4>Natural Language Processing</h4>
+                        <p><a href="https://ufal.mff.cuni.cz/courses/npfl124" target="_blank"
+                          class="btn">Subject description.</a></p>
+                        <h4>Artificial Intelligence 2</h4>
+                        <p><a href="https://ktiml.mff.cuni.cz/~bartak/ui2/" target="_blank"
+                          class="btn">Subject description.</a></p>
+                        <h4>Planning & Scheduling</h4>
+                        <p><a href="https://ktiml.mff.cuni.cz/~bartak/planovani/" target="_blank"
+                          class="btn">Subject description.</a></p>
+                    <h3>2022 | Semester 2 | The University of Melbourne</h3>
+                        <h4>Introduction to Machine Learning</h4>
+                        <p><a href="https://handbook.unimelb.edu.au/2024/subjects/comp90044" target="_blank"
+                          class="btn">Subject description.</a></p>
+                        <h4>Declarative Programming</h4>
+                        <p><a href="https://handbook.unimelb.edu.au/2024/subjects/comp90044" target="_blank"
+                          class="btn">Subject description.</a></p>
+                        <h4>Distributed Systems</h4>
+                        <p><a href="https://handbook.unimelb.edu.au/2024/subjects/comp90044" target="_blank"
+                          class="btn">Subject description.</a></p>
+                    <h3>2022 | Semester 1 | The University of Melbourne</h3>
+                        <p><a href="https://handbook.unimelb.edu.au/2024/subjects/comp90044" target="_blank"
+                          class="btn">Subject description.</a></p>
+                    <h3>2021 | Semester 2 | La Trobe University</h3>
+                        <h4>Huss Honours Thesis B</h4>
+                            <p><a href="https://handbook.latrobe.edu.au/subjects/2024/HUS4THB" target="_blank"
+                            class="btn">Subject description.</a></p>
+                        <h4>Humanities Reading Ext 4B</h4>
+                            <p><a href="https://www.latrobe.edu.au/students/your-course/
+                            subjects/2020/hus4rdb-humanities-reading-ext-4b" target="_blank"
+                            class="btn">Subject description.</a></p>
+                    <h3>2021 | Semester 1 | La Trobe University</h3>
+                        <h4>Huss Honours Thesis A</h4>
+                            <p><a href="https://handbook.latrobe.edu.au/subjects/2024/HUS4THA" target="_blank"
+                            class="btn">Subject description.</a></p>
+                        <h4>Advanced Research in Politics, Philosophy, and GSDS</h4>
+                            <p><a href="https://handbook.unimelb.edu.au/2024/subjects/comp90044" target="_blank"
+                            class="btn">Subject description.</a></p>
+                </div>
+            </section>
+            <section id="writing" class="section">
+                <div class="hero-content">
+                    <h2>Writing</h2>
+                    <div class="writing-item">
+                        <h3>Honours Thesis</h3>
+                        <h4>Mending Memory</h4><h4>An Essay on Technics and Colonialism</h4>
+                        <p>Technology is traditionally conceived as operating according to an instrumental logic,
+                            efficiency for efficiency’s sake. In this essay, I will demonstrate another side of technology,
+                            the possessive, by advancing an anticolonial critique. Put simply, I argue that the neoliberal
+                            individual, state, and their relation are technologies that have become appropriated into the
+                            telos of technology, Enframing. Accordingly, their ideological constructions, utilised to
+                            maintain possession, perpetuate the totalising instrumentality of technology. From my critique,
+                            I make the conclusion that Enframing is dangerously simplifying memory, both culturally and
+                            ecologically. I also characterise the cosmology behind Enframing, as that which devours other
+                            cosmologies. To mend memory and dissolve technology’s possessive, through the opening of
+                            cosmology, I propose a pluralism of technics embedded in an affirmation of the land. Within
+                            this pluralism, I advance a novel technic of my own, making-anarchic: the making of the
+                            unmaking of time.</p>
+                        <p>Read in full <a href="documents/thesis.pdf" target="_blank" class="btn">here</a></p>
+                    </div>
+                    <div class="writing-item">
+                        <h3>Article 1</h3>
+                        <p>Description of Article 1</p>
+                        <a href="path/to/article1.html" target="_blank" class="btn">Read Article 1</a>
+                    </div>
+                    <div class="writing-item">
+                        <h3>Article 2</h3>
+                        <p>Description of Article 2</p>
+                        <a href="path/to/article2.html" target="_blank" class="btn">Read Article 2</a>
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
 
-        <section id="contact" class="section">
-            <div class="hero-content">
-                <h2>Contact Me</h2>
-                <p>Email: johndoe@email.com</p>
-                <p>Phone: (123) 456-7890</p>
-                <p>LinkedIn: <a href="https://www.linkedin.com/in/johndoe">linkedin.com/in/johndoe</a></p>
-            </div>
-        </section>
-    </main>
+            <section id="projects" class="section">
+                <div class="section" id="projects">
+                    <div class="hero-content">
+                        <h2>Projects</h2>
+                        <!-- Other project items -->
 
-    <footer>
-        <p>&copy; 2023 John Doe. All rights reserved.</p>
-    </footer>
+                        <div class="project-item">
+                            <h3>Game Demo</h3>
+                            <p>Check out this interactive demo of our latest game!</p>
+                            <iframe src="path/to/game-demo.html" width="800" height="600"></iframe>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
-    <script src="script.js"></script>
+            <section id="contact" class="section">
+                <div class="hero-content">
+                    <h2>Contact</h2>
+                    <p>Email: tjaholla@gmail.com</p>
+                    <p>Email 2.0: tholland1@student.unimelb.edu.au</p>
+                    <p>Github: <a href="https://github.com/e-timmy">here</a></p>
+                    <p>LinkedIn: <a href="https://www.linkedin.com/in/t-holland-a03778231/">
+                        https://www.linkedin.com/in/t-holland-a03778231/</a></p>
+                </div>
+            </section>
+        </main>
+
+        <footer>
+            <p>&copy; 2024 Timothy Holland. All rights reserved.</p>
+        </footer>
+
+        <script src="script.js"></script>
+    </div>
 </body>
 </html>
