Panelled: new website design.

--- a/clean-website/index.html
+++ b/clean-website/index.html
@@ -73,48 +73,63 @@
                         <p><a href="https://handbook.unimelb.edu.au/2024/subjects/comp90044" target="_blank"
                           class="btn">Subject description.</a></p>
                     <h3>2023 | Semester 2 | The University of Melbourne</h3>
+                        <p>Semester off travelling abroad.</p>
                     <h3>2023 | Semester 1 | Charles University, Prague</h3>
                         <h4>Data Structures 1</h4>
-                        <p><a href="https://ktiml.mff.cuni.cz/~fink/teaching/data_structures_I/" target="_blank"
-                          class="btn">Subject description.</a></p>
+                            <p>Final ECTS grade: A</p>
+                            <p><a href="https://ktiml.mff.cuni.cz/~fink/teaching/data_structures_I/" target="_blank"
+                                  class="btn">Subject description.</a></p>
                         <h4>Deep Learning</h4>
-                        <p><a href="https://ufal.mff.cuni.cz/courses/npfl114/2223-summer" target="_blank"
-                          class="btn">Subject description.</a></p>
+                            <p>Final ECTS grade: A</p>
+                            <p><a href="https://ufal.mff.cuni.cz/courses/npfl114/2223-summer" target="_blank"
+                                  class="btn">Subject description.</a></p>
                         <h4>Natural Language Processing</h4>
-                        <p><a href="https://ufal.mff.cuni.cz/courses/npfl124" target="_blank"
-                          class="btn">Subject description.</a></p>
+                            <p>Final ECTS grade: A</p>
+                            <p><a href="https://ufal.mff.cuni.cz/courses/npfl124" target="_blank"
+                                  class="btn">Subject description.</a></p>
                         <h4>Artificial Intelligence 2</h4>
-                        <p><a href="https://ktiml.mff.cuni.cz/~bartak/ui2/" target="_blank"
-                          class="btn">Subject description.</a></p>
+                            <p>Final ECTS grade: A</p>
+                            <p><a href="https://ktiml.mff.cuni.cz/~bartak/ui2/" target="_blank"
+                                  class="btn">Subject description.</a></p>
                         <h4>Planning & Scheduling</h4>
-                        <p><a href="https://ktiml.mff.cuni.cz/~bartak/planovani/" target="_blank"
-                          class="btn">Subject description.</a></p>
+                            <p>Final ECTS grade: A</p>
+                            <p><a href="https://ktiml.mff.cuni.cz/~bartak/planovani/" target="_blank"
+                                  class="btn">Subject description.</a></p>
                     <h3>2022 | Semester 2 | The University of Melbourne</h3>
                         <h4>Introduction to Machine Learning</h4>
-                        <p><a href="https://handbook.unimelb.edu.au/2024/subjects/comp90044" target="_blank"
-                          class="btn">Subject description.</a></p>
+                            <p>Final mark: 87%</p>
+                            <p><a href="https://handbook.unimelb.edu.au/2024/subjects/comp90044" target="_blank"
+                                  class="btn">Subject description.</a></p>
                         <h4>Declarative Programming</h4>
-                        <p><a href="https://handbook.unimelb.edu.au/2024/subjects/comp90044" target="_blank"
-                          class="btn">Subject description.</a></p>
+                            <p>Final mark: 73%</p>
+                            <p><a href="https://handbook.unimelb.edu.au/2024/subjects/comp90044" target="_blank"
+                                  class="btn">Subject description.</a></p>
                         <h4>Distributed Systems</h4>
-                        <p><a href="https://handbook.unimelb.edu.au/2024/subjects/comp90044" target="_blank"
-                          class="btn">Subject description.</a></p>
+                            <p>Final mark: 90%</p>
+                            <p><a href="https://handbook.unimelb.edu.au/2024/subjects/comp90044" target="_blank"
+                                  class="btn">Subject description.</a></p>
                     <h3>2022 | Semester 1 | The University of Melbourne</h3>
+                        <h4>Database Systems</h4>
+                        <p>Final mark: 85%</p>
                         <p><a href="https://handbook.unimelb.edu.au/2024/subjects/comp90044" target="_blank"
-                          class="btn">Subject description.</a></p>
+                            class="btn">Subject description.</a></p>
                     <h3>2021 | Semester 2 | La Trobe University</h3>
                         <h4>Huss Honours Thesis B</h4>
+                            <p>Final mark: 85%</p>
                             <p><a href="https://handbook.latrobe.edu.au/subjects/2024/HUS4THB" target="_blank"
-                            class="btn">Subject description.</a></p>
+                                  class="btn">Subject description.</a></p>
                         <h4>Humanities Reading Ext 4B</h4>
+                            <p>Final mark: 93%</p>
                             <p><a href="https://www.latrobe.edu.au/students/your-course/
                             subjects/2020/hus4rdb-humanities-reading-ext-4b" target="_blank"
                             class="btn">Subject description.</a></p>
                     <h3>2021 | Semester 1 | La Trobe University</h3>
                         <h4>Huss Honours Thesis A</h4>
+                            <p>Final mark: 85%</p>
                             <p><a href="https://handbook.latrobe.edu.au/subjects/2024/HUS4THA" target="_blank"
                             class="btn">Subject description.</a></p>
                         <h4>Advanced Research in Politics, Philosophy, and GSDS</h4>
+                            <p>Final mark: 87%</p>
                             <p><a href="https://handbook.unimelb.edu.au/2024/subjects/comp90044" target="_blank"
                             class="btn">Subject description.</a></p>
                 </div>
