Clean: footer bug -> removing footer.

--- a/clean-website/index.html
+++ b/clean-website/index.html
@@ -44,21 +44,33 @@
                         <a href="#" data-section="coursework" target="_blank" class="tab">here</a>.</p>
                     <h3>Master of Computer Science | The University of Melbourne </h3>
                     <p>Dates: July 2022 - Present</p>
-                    <p>Coursework: Data Structures, Algorithms, Web Development, Database Systems</p>
+                    <p>Weighted-Average-Mark: 84%</p>
+                    <p>Coursework: Introduction to Machine Learning, Declarative Programming, Distributed Systems,
+                        The Ethics of Artificial Intelligence, Research Methods.</p>
+                    <p>Thesis: forthcoming...</p>
                     <h3>Exchange Semester | Charles University | Prague </h3>
                     <p>Dates: January 2023 - June 2023</p>
-                    <p>Coursework: </p>
+                    <p>GPA: 4.0/4.0</p>
+                    <p>Coursework: Data Structures, Deep Learning, Natural Language Processing, Artificial Intelligence 2,
+                        Planning & Scheduling.</p>
                     <h3>Bachelor of Arts (Hons) | La Trobe University </h3>
                     <p>Dates: January 2021 - December 2021</p>
-                    <p>Coursework: </p>
+                    <p>Weighted-Average-Mark: 88%</p>
+                    <p>Coursework: Advanced Research in Politics, Philosophy & GSDS,
+                        Humanities Extended Reading Subject</p>
+                    <p>Thesis: Mending Memory - An Essay on Technics and Colonialism.</p>
                     <h3>Diploma of Informatics | The University of Melbourne</h3>
                     <p>Dates: July 2015 - December 2018</p>
-                    <p>Coursework: </p>
+                    <p>Weighted-Average-Mark: 74.5%</p>
+                    <p>Coursework: Foundations of Computing, Foundations of Algorithms, Algorithms & Data Structures,
+                    Objected-Oriented Software Development, Artificial Intelligence, Software Modelling & Design</p>
                     <h3>Bachelor of Arts | The University of Melbourne</h3>
                     <p>Dates: January 2014 - December 2018</p>
-                    <p>Coursework:</p>
+                    <p>Weighted-Average-Mark: 73.5%</p>
+                    <p>Coursework: </p>
                     <h3>Exchange Semester | Boston University </h3>
                     <p>Dates: July 2017 - December 2017</p>
+                    <p>GPA: 3.91/4.0</p>
                     <p>Coursework: </p>
                 </div>
             </section>
@@ -111,7 +123,7 @@
                     <h3>2022 | Semester 1 | The University of Melbourne</h3>
                         <h4>Database Systems</h4>
                         <p>Final mark: 85%</p>
-                        <p><a href="https://handbook.unimelb.edu.au/2024/subjects/comp90044" target="_blank"
+                        <p><a href="https://handbook.unimelb.edu.au/2024/subjects/info20003" target="_blank"
                             class="btn">Subject description.</a></p>
                     <h3>2021 | Semester 2 | La Trobe University</h3>
                         <h4>Huss Honours Thesis B</h4>
