--- a/panelled-website/index.html
+++ b/panelled-website/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <nav id="menu">
+    <div class="menu-icon">☰</div>
     <ul>
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
@@ -17,7 +18,7 @@
 </nav>
 
 <main>
-    <section id="home" class="hero">
+    <section id="home" class="active">
         <div class="content">
             <h1>Welcome to My Personal Website</h1>
             <p>Explore my world and get to know me better.</p>
@@ -28,6 +29,7 @@
         <div class="content">
             <h2>About Me</h2>
             <p>I am a passionate individual who loves creating amazing things.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ut risus eu lorem consequat aliquet. Fusce ac ipsum a sapien malesuada commodo.</p>
         </div>
     </section>
 
@@ -35,6 +37,7 @@
         <div class="content">
             <h2>My Portfolio</h2>
             <p>Check out some of my latest projects and creations.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ut risus eu lorem consequat aliquet. Fusce ac ipsum a sapien malesuada commodo.</p>
         </div>
     </section>
 
@@ -42,6 +45,7 @@
         <div class="content">
             <h2>Contact Me</h2>
             <p>Get in touch with me for any inquiries or collaborations.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ut risus eu lorem consequat aliquet. Fusce ac ipsum a sapien malesuada commodo.</p>
         </div>
     </section>
 </main>
